WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109087
Non-scrollable divs and non-scrollable iframes can scroll with touch
https://bugs.webkit.org/show_bug.cgi?id=109087
Summary
Non-scrollable divs and non-scrollable iframes can scroll with touch
Terry Anderson
Reported
2013-02-06 12:43:30 PST
Non-scrollable divs and non-scrollable iframes can scroll with touch
Attachments
WIP, not for review
(2.46 KB, patch)
2013-02-06 12:43 PST
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Example of a non-scrollable div that does not scroll with mousewheels but does scroll with touch in chromium
(825 bytes, text/html)
2013-02-06 13:22 PST
,
Terry Anderson
no flags
Details
Example of a non-scrollable iframe that does not scroll with mousewheels but does scroll with touch in chromium
(357 bytes, text/html)
2013-02-06 13:23 PST
,
Terry Anderson
no flags
Details
Patch
(14.81 KB, patch)
2013-02-07 12:47 PST
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Terry Anderson
Comment 1
2013-02-06 12:43:47 PST
Created
attachment 186899
[details]
WIP, not for review
Terry Anderson
Comment 2
2013-02-06 13:22:34 PST
Created
attachment 186906
[details]
Example of a non-scrollable div that does not scroll with mousewheels but does scroll with touch in chromium
Terry Anderson
Comment 3
2013-02-06 13:23:35 PST
Created
attachment 186908
[details]
Example of a non-scrollable iframe that does not scroll with mousewheels but does scroll with touch in chromium
Terry Anderson
Comment 4
2013-02-07 12:47:26 PST
Created
attachment 187150
[details]
Patch
Eric Seidel (no email)
Comment 5
2013-02-07 14:29:51 PST
Comment on
attachment 187150
[details]
Patch Looks reasonable.
WebKit Review Bot
Comment 6
2013-02-07 14:52:04 PST
Comment on
attachment 187150
[details]
Patch Rejecting
attachment 187150
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 187150, '--port=chromium-xvfb']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: mands.analyzechangelog import AnalyzeChangeLog File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/commands/analyzechangelog.py", line 39, in <module> from webkitpy.tool import steps File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/__init__.py", line 60, in <module> from webkitpy.tool.steps.runtests import RunTests File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/runtests.py", line 106 else ^ SyntaxError: invalid syntax Full output:
http://queues.webkit.org/results/16418365
WebKit Review Bot
Comment 7
2013-02-07 15:59:52 PST
Comment on
attachment 187150
[details]
Patch Clearing flags on attachment: 187150 Committed
r142195
: <
http://trac.webkit.org/changeset/142195
>
WebKit Review Bot
Comment 8
2013-02-07 15:59:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug