Non-scrollable divs and non-scrollable iframes can scroll with touch https://bugs.webkit.org/show_bug.cgi?id=109087

Reviewed by Eric Seidel.

Source/WebCore:

Tests: fast/events/touch/gesture/touch-gesture-noscroll-div.html
       fast/events/touch/gesture/touch-gesture-noscroll-iframe.html

When finding a candidate for a scrollable node in
EventHandler::handleGestureScrollUpdate(), select the document node
if it is reached before any scrollable element when walking up the DOM
tree. Also ensure that calling RenderLayer::scrollBy() for a document
node does not result in scrolling if the element is not scrollable.

* page/EventHandler.cpp:
(WebCore::closestScrollableNodeCandidate):
(WebCore::EventHandler::handleGestureScrollUpdate):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollBy):

LayoutTests:

Two new layout tests added to demonstrate that the changes to
RenderLayer::scrollBy() and closestScrollableNodeCandidate() in
EventHandler.cpp are both necessary to ensure that non-scrollable
divs and non-scrollable iframes cannot be scrolled with touch.

* fast/events/touch/gesture/touch-gesture-noscroll-div-expected.txt: Added.
* fast/events/touch/gesture/touch-gesture-noscroll-div.html: Added.
* fast/events/touch/gesture/touch-gesture-noscroll-iframe-expected.txt: Added.
* fast/events/touch/gesture/touch-gesture-noscroll-iframe.html: Added.
* platform/chromium/fast/events/touch/gesture/touch-gesture-noscroll-div-expected.txt: Added.
* platform/chromium/fast/events/touch/gesture/touch-gesture-noscroll-iframe-expected.txt: Added.


Canonical link: https://commits.webkit.org/127440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142195 268f45cc-cd09-0410-ab3c-d52691b4dbfc